@@ -6,7 +6,16 @@ use RPi::WiringPi;
 use RPi::WiringPi::Constant qw(:all);
 use Time::HiRes qw(usleep);
 
+if (! @ARGV){
+    print "\nneed test number as arg: 1-WPI, 2-GPIO, 3-PHYS, 4-SYS\n";
+    print "\nthis test tests the pwm() pin function. " .
+          "Connect an LED to physical pin *12*\n";
+    exit;
+}
+
 # phys 12, wpi 1, gpio 18
+
+# LED should gradually get brighter then turn off for all tests
 
 if (! @ARGV){
     print "need arg\n";
@@ -17,8 +26,13 @@ my $which = $ARGV[0];
 
 my $mod = 'RPi::WiringPi';
 
+# wpi
+
 if ($which == 1){ 
-    # WPI - setup()
+    print "WPI scheme test\n";
+
+    die "\ntest 1 requires root\n" if $> != 0;
+
     my $pi = $mod->new;
     my $p = $pi->pin(1);
     
@@ -28,7 +42,7 @@ if ($which == 1){
         $p->pwm($_);
         usleep 5000;
     }
-    print "done\n";
+    print "hit ENTER...\n";
     <STDIN>;
 
     $p->pwm(0);
@@ -39,7 +53,10 @@ if ($which == 1){
 # gpio
 
 if ($which == 2){ 
-    # WPI - setup()
+    print "GPIO scheme test\n";
+
+    die "\ntest 2 requires root\n" if $> != 0;
+
     my $pi = $mod->new(setup => 'gpio');
     my $p = $pi->pin(18);
     
@@ -49,7 +66,7 @@ if ($which == 2){
         $p->pwm($_);
         usleep 5000;
     }
-    print "done\n";
+    print "hit ENTER...\n";
     <STDIN>;
 
     $p->pwm(0);
@@ -60,7 +77,10 @@ if ($which == 2){
 # phys
 
 if ($which == 3){ 
-    # WPI - setup()
+    print "PHYS scheme test\n";
+
+    die "\ntest 3 requires root\n" if $> != 0;
+
     my $pi = $mod->new(setup => 'phys');
     my $p = $pi->pin(12);
     
@@ -70,7 +90,31 @@ if ($which == 3){
         $p->pwm($_);
         usleep 5000;
     }
-    print "done\n";
+    print "hit ENTER...\n";
+    <STDIN>;
+
+    $p->pwm(0);
+    $p->mode(INPUT);
+    $p->write(LOW);
+}
+
+# sys
+
+if ($which == 4){
+    print "GPIO_SYS scheme test\n";
+
+    die "\ntest 4 requires a non-root user\n" if $> == 0;
+
+    my $pi = $mod->new(setup => 'sys');
+    my $p = $pi->pin(18);
+
+    $p->mode(PWM_OUT);
+
+    for (0..100){
+        $p->pwm($_);
+        usleep 5000;
+    }
+    print "hit ENTER...\n";
     <STDIN>;
 
     $p->pwm(0);
